# cterm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-plz.toml  run.sh
.github/workflows/: build.yml  release-plz.yml
config/: default_config.toml  sticky_tabs_example.toml
config/themes/: tokyo_night.toml
crates/cterm-app/: Cargo.toml
crates/cterm-app/src/: config.rs  daemon_reconnect.rs  daemon_session.rs  docker.rs  git_sync.rs  lib.rs  log_capture.rs  quick_open.rs  session.rs  shortcuts.rs  ssh_history.rs
crates/cterm-app/src/crash_recovery/: mod.rs  state.rs  watchdog.rs
crates/cterm-app/src/upgrade/: mod.rs  protocol.rs  state.rs  updater.rs
crates/cterm-client/: Cargo.toml
crates/cterm-client/src/: connection.rs  error.rs  lib.rs  remote_manager.rs  session.rs  socket.rs
crates/cterm-client/tests/: handshake_timeout.rs
crates/cterm-cocoa/: Cargo.toml
crates/cterm-cocoa/src/: app.rs  cg_renderer.rs  dialogs.rs  file_transfer.rs  keycode.rs  lib.rs  log_capture.rs  log_viewer.rs  menu.rs  mouse.rs  notification_bar.rs  preferences.rs  quick_open.rs  remotes_dialog.rs  ssh_prompt.rs  tab_bar.rs  tab_templates.rs  terminal_view.rs  unixshells_dialog.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-core/: Cargo.toml
crates/cterm-core/src/: cell.rs  color.rs  drcs.rs  fd_passing.rs  grid.rs  image_decode.rs  iterm2.rs  lib.rs  mouse.rs  native_pty.rs  parser.rs  pty.rs  screen.rs  sixel.rs  ssh.rs  streaming_file.rs  term.rs
crates/cterm-gtk/: Cargo.toml
crates/cterm-gtk/src/: app.rs  dialogs.rs  file_transfer.rs  lib.rs  main.rs  menu.rs  notification_bar.rs  quick_open.rs  remotes_dialog.rs  session_dialog.rs  ssh_prompt.rs  tab_bar.rs  tab_templates_dialog.rs  terminal_widget.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-headless/: Cargo.toml  build.rs
crates/cterm-headless/proto/: terminal.proto
crates/cterm-headless/src/: cli.rs  error.rs  lib.rs  main.rs  relaunch.rs  server.rs  service.rs
crates/cterm-headless/src/bridge/: mod.rs  reader.rs  writer.rs
crates/cterm-headless/src/convert/: screen.rs
crates/cterm-headless/src/latch/: auth.rs  bridge.rs  handler.rs  host_key.rs  mod.rs  relay.rs  renderer.rs  ssh_server.rs  web_server.rs
crates/cterm-headless/src/latch/web/static/: index.html
crates/cterm-headless/src/session/: id.rs  manager.rs  mod.rs  state.rs
crates/cterm-headless/tests/: grpc_integration.rs
crates/cterm-mosh/: Cargo.toml
crates/cterm-mosh/src/: crypto.rs  fragment.rs  lib.rs  proto.rs  server_session.rs  session.rs  ssh_launch.rs  ssp.rs  ssp_server.rs  transport.rs
crates/cterm-proto/proto/: terminal.proto
crates/cterm-ui/: Cargo.toml
crates/cterm-ui/src/: events.rs  lib.rs  theme.rs  traits.rs  utils.rs
crates/cterm-win32/: Cargo.toml
crates/cterm-win32/src/: clipboard.rs  dialogs.rs  dpi.rs  keycode.rs  lib.rs  log_viewer.rs  menu.rs  mouse.rs  notification_bar.rs  preferences_dialog.rs  quick_open.rs  remotes_dialog.rs  session_dialog.rs  ssh_prompt.rs  tab_bar.rs  terminal_canvas.rs  unixshells_dialog.rs  update_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-win32/tests/: ui_integration.rs
crates/cterm-win32/tests/harness/: mod.rs
docs/: configuration.md
packaging/macos/: Info.plist  cterm.icns
packaging/windows/: installer.nsi
scripts/: linux_ui_test.sh  macos_ui_test.sh  windows_ui_test.ps1
src/: main.rs
