[package]
name = "cterm-headless"
version.workspace = true
edition.workspace = true
description = "Headless terminal daemon with gRPC API for cterm"

[[bin]]
name = "ctermd"
path = "src/main.rs"

[features]
default = []
latch = [
    "russh",
    "ssh-key",
    "rand",
    "cterm-mosh",
    "cterm-app",
    "tokio-tungstenite",
    "rcgen",
    "rust-embed",
    "quinn",
    "rustls",
    "rustls-pemfile",
    "toml",
    "futures-util",
    "tokio-rustls",
    "tokio-util",
    "hostname",
    "webpki-roots",
    "ed25519-dalek",
    "getrandom",
    "base64",
]

[dependencies]
cterm-core.workspace = true
cterm-proto.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
parking_lot.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

# Latch optional dependencies
russh = { workspace = true, optional = true }
ssh-key = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
cterm-mosh = { workspace = true, optional = true }
cterm-app = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio-rustls = { version = "0.26", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
hostname = { version = "0.4", optional = true }
webpki-roots = { version = "0.26", optional = true }
ed25519-dalek = { version = "2", optional = true }
getrandom = { version = "0.3", optional = true }
base64 = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
